--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ ul li:hover {
 
     background: rgb(136, 136, 136);
 
-    color: #fff;
+    color: rgb(61, 53, 81);
 
     text-decoration: line-through;
 
@@ -240,6 +240,14 @@ input {
     background-color: #bbb;
 
 }
+
+
+
+
+
+
+
+
 
 
 
